--- a/src/app/paginas/cajas/edit-cajas/edit-cajas.page.html
+++ b/src/app/paginas/cajas/edit-cajas/edit-cajas.page.html
@@ -1,105 +1,131 @@
-<ion-header class="ion-padding">
-  <ion-toolbar color="primary">
-    <ion-title class="ion-text-center">{{ titulo }}</ion-title>
+<ion-header class="ion-no-border header-gradient">
+  <ion-toolbar class="header-gradient">
+    <ion-buttons slot="start">
+      <ion-button fill="clear" (click)="dismiss()" class="back-button">
+        <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-title class="header-title">
+      <div class="title-container">
+        <ion-icon name="person-add" class="title-icon"></ion-icon>
+        {{ titulo }}
+      </div>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="form-content">
-  <form>
+<ion-content class="content-background ion-padding">
+  <div class="form-container">
+    <form>
+      <ion-grid>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="person-circle-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Nombre del Cliente</ion-label>
+              <ion-input type="text" [(ngModel)]="EditCaja.nombre" name="nombre" required></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="person-circle-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Responsable</ion-label>
+              <ion-input type="text" [(ngModel)]="EditCaja.responsable" name="responsable"></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="calendar-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Venc. Inicial</ion-label>
+              <ion-input type="date" [(ngModel)]="EditCaja.iniciotimbrado" name="iniciotimbrado"></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="calendar-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Venc. Final</ion-label>
+              <ion-input type="date" [(ngModel)]="EditCaja.vencetimbrado" name="vencetimbrado"></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="document-text-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">N° Timbrado</ion-label>
+              <ion-input type="number" [(ngModel)]="EditCaja.timbrado" name="timbrado" required></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="pin-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Expedición</ion-label>
+              <ion-input type="text" [(ngModel)]="EditCaja.expedicion" name="expedicion" required></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="receipt-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Factura</ion-label>
+              <ion-input type="number" [(ngModel)]="EditCaja.factura" name="factura"></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="file-tray-full-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Recibo</ion-label>
+              <ion-input type="number" [(ngModel)]="EditCaja.recibo" name="recibo"></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="print-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Impresora</ion-label>
+              <ion-input type="text" [(ngModel)]="EditCaja.impresoracaja" name="impresoracaja" required></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="checkmark-circle-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Estado</ion-label>
+              <ion-select [(ngModel)]="EditCaja.estado" name="estado" [compareWith]="compareWithEstado">
+                <ion-select-option [value]="1">ACTIVO</ion-select-option>
+                <ion-select-option [value]="0">INACTIVO</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </div>
+</ion-content>
+
+
+<ion-footer class="custom-footer">
+  <ion-toolbar class="footer-toolbar">
     <ion-grid>
-      <ion-row>
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Nombre Caja</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCaja.nombre" name="nombre" required></ion-input>
-          </ion-item>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="6" class="ion-text-center">
+          <ion-button expand="block" color="success" (click)="saveCaja()">
+            <ion-icon slot="start" name="save"></ion-icon>
+            Guardar
+          </ion-button>
         </ion-col>
-
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Responsable</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCaja.responsable" name="responsable" ></ion-input>
-          </ion-item>
-        </ion-col>
-
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Venc. Inicial</ion-label>
-            <ion-input type="date" [(ngModel)]="EditCaja.iniciotimbrado" name="iniciotimbrado"></ion-input>
-          </ion-item>
-        </ion-col>
-
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Venc. Final</ion-label>
-            <ion-input type="date" [(ngModel)]="EditCaja.vencetimbrado" name="vencetimbrado"></ion-input>
-          </ion-item>
-        </ion-col>
-
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">N° Timbrado</ion-label>
-            <ion-input type="number" [(ngModel)]="EditCaja.timbrado" name="timbrado" required></ion-input>
-          </ion-item>
-        </ion-col>
-
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Expedición</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCaja.expedicion" name="expedicion" required></ion-input>
-          </ion-item>
-        </ion-col>
-
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Factura</ion-label>
-            <ion-input type="number" [(ngModel)]="EditCaja.factura" name="factura"></ion-input>
-          </ion-item>
-        </ion-col>
-
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Recibo</ion-label>
-            <ion-input type="number" [(ngModel)]="EditCaja.recibo" name="recibo"></ion-input>
-          </ion-item>
-        </ion-col>
-
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Impresora</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCaja.impresoracaja" name="impresoracaja" required></ion-input>
-          </ion-item>
-        </ion-col>
-
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Estado</ion-label>
-            <ion-select [(ngModel)]="EditCaja.estado" name="estado" [compareWith]="compareWithEstado">
-              <ion-select-option value="1">ACTIVO</ion-select-option>
-              <ion-select-option value="0">INACTIVO</ion-select-option>
-            </ion-select>
-          </ion-item>
+        <ion-col size="6" class="ion-text-center">
+          <ion-button expand="block" color="medium" fill="outline" (click)="dismiss()">
+            <ion-icon slot="start" name="log-out"></ion-icon>
+            Cancelar
+          </ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
-  </form>
-</ion-content>
-
-<ion-footer class="custom-footer">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" class="ion-text-center">
-        <ion-button expand="block" color="success" (click)="saveCaja()">
-          <ion-icon slot="start" name="save"></ion-icon>
-          Guardar
-        </ion-button>
-      </ion-col>
-      <ion-col size="6" class="ion-text-center">
-        <ion-button expand="block" color="medium" fill="outline" (click)="dismiss()">
-          <ion-icon slot="start" name="log-out"></ion-icon>
-          Cancelar
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  </ion-toolbar>
 </ion-footer>
