--- a/src/app/paginas/clientes/edit-clientes/edit-clientes.page.html
+++ b/src/app/paginas/clientes/edit-clientes/edit-clientes.page.html
@@ -1,106 +1,127 @@
-<ion-header class="ion-padding">
-  <ion-toolbar color="primary">
-    <ion-title class="ion-text-center">{{ titulo }}</ion-title>
+<ion-header class="ion-no-border header-gradient">
+  <ion-toolbar class="header-gradient">
+    <ion-buttons slot="start">
+      <ion-button fill="clear" (click)="dismiss()" class="back-button">
+        <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-title class="header-title">
+      <div class="title-container">
+        <ion-icon name="person-add" class="title-icon"></ion-icon>
+        {{ titulo }}
+      </div>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="form-content">
-  <form>
-    <ion-grid>
-      <ion-row>
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Nombre del Cliente</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCliente.nombre" name="nombre" required></ion-input>
-          </ion-item>
-        </ion-col>
+<ion-content class="content-background ion-padding">
+  <div class="form-container">
+    <form>
+      <ion-grid>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            
+            <ion-item class="modern-item">
+              <ion-icon name="person-circle-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Nombre del Cliente</ion-label>
+              <ion-input type="text" [(ngModel)]="EditCliente.nombre" name="nombre" required></ion-input>
+            </ion-item>
+            
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Cédula de Identidad</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCliente.cedula" name="cedula" required pattern="^[0-9]*$"></ion-input>
-          </ion-item>
-        </ion-col>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="id-card-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Cédula de Identidad</ion-label>
+              <ion-input type="text" [(ngModel)]="EditCliente.cedula" name="cedula" required pattern="^[0-9]*$"></ion-input>
+            </ion-item>
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">RUC</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCliente.ruc" name="ruc" required></ion-input>
-          </ion-item>
-        </ion-col>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="document-text-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">RUC</ion-label>
+              <ion-input type="text" [(ngModel)]="EditCliente.ruc" name="ruc" required></ion-input>
+            </ion-item>
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item custom-textarea">
-            <ion-label position="floating">Dirección</ion-label>
-            <ion-buttons slot="end">
-              <ion-button fill="clear" color="danger">
-                <ion-icon slot="icon-only" name="location"></ion-icon>
-              </ion-button>
-            </ion-buttons>
-            <ion-textarea [(ngModel)]="EditCliente.direccion" name="direccion"></ion-textarea>
-          </ion-item>
-        </ion-col>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item custom-textarea">
+              <ion-icon name="location-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Dirección</ion-label>
+              <ion-textarea [(ngModel)]="EditCliente.direccion" name="direccion"></ion-textarea>
+            </ion-item>
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Celular</ion-label>
-            <ion-input type="text" [(ngModel)]="EditCliente.telefono" name="telefono" required></ion-input>
-          </ion-item>
-        </ion-col>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="call-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Celular</ion-label>
+              <ion-input type="text" [(ngModel)]="EditCliente.telefono" name="telefono" required></ion-input>
+            </ion-item>
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Mail</ion-label>
-            <ion-input type="email" [(ngModel)]="EditCliente.mail" name="mail"></ion-input>
-          </ion-item>
-        </ion-col>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="mail-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Mail</ion-label>
+              <ion-input type="email" [(ngModel)]="EditCliente.mail" name="mail"></ion-input>
+            </ion-item>
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Fecha Nacimiento</ion-label>
-            <ion-input type="date" [(ngModel)]="EditCliente.fechanacimiento" name="fechanacimiento"></ion-input>
-          </ion-item>
-        </ion-col>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="calendar-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Fecha Nacimiento</ion-label>
+              <ion-input type="date" [(ngModel)]="EditCliente.fechanacimiento" name="fechanacimiento"></ion-input>
+            </ion-item>
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Sexo</ion-label>
-            <ion-select [(ngModel)]="EditCliente.sexo" name="sexo" [compareWith]="compareWithSexo">
-              <ion-select-option value="1">MASCULINO</ion-select-option>
-              <ion-select-option value="2">FEMENINO</ion-select-option>
-            </ion-select>
-          </ion-item>
-        </ion-col>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="transgender-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Sexo</ion-label>
+              <ion-select [(ngModel)]="EditCliente.sexo" name="sexo" [compareWith]="compareWithSexo">
+                <ion-select-option value="1">MASCULINO</ion-select-option>
+                <ion-select-option value="2">FEMENINO</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Estado</ion-label>
-            <ion-select [(ngModel)]="EditCliente.estado" name="estado" [compareWith]="compareWithEstado">
-              <ion-select-option value="1">ACTIVO</ion-select-option>
-              <ion-select-option value="0">INACTIVO</ion-select-option>
-            </ion-select>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </form>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="checkmark-circle-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Estado</ion-label>
+              <ion-select [(ngModel)]="EditCliente.estado" name="estado" [compareWith]="compareWithEstado">
+                <ion-select-option value="1">ACTIVO</ion-select-option>
+                <ion-select-option value="0">INACTIVO</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </div>
 </ion-content>
 
 <ion-footer class="custom-footer">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" class="ion-text-center">
-        <ion-button expand="block" color="success" (click)="saveCliente()">
-          <ion-icon slot="start" name="save"></ion-icon>
-          Guardar
-        </ion-button>
-      </ion-col>
-      <ion-col size="6" class="ion-text-center">
-        <ion-button expand="block" color="medium" fill="outline" (click)="dismiss()">
-          <ion-icon slot="start" name="log-out"></ion-icon>
-          Cancelar
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <ion-toolbar class="footer-toolbar">
+    <ion-grid>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="6" class="ion-text-center">
+          <ion-button expand="block" color="success" (click)="saveCliente()">
+            <ion-icon slot="start" name="save"></ion-icon>
+            Guardar
+          </ion-button>
+        </ion-col>
+        <ion-col size="6" class="ion-text-center">
+          <ion-button expand="block" color="medium" fill="outline" (click)="dismiss()">
+            <ion-icon slot="start" name="log-out"></ion-icon>
+            Cancelar
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
 </ion-footer>
