--- a/src/app/paginas/productos/edit-productos/edit-productos/edit-productos.page.html
+++ b/src/app/paginas/productos/edit-productos/edit-productos/edit-productos.page.html
@@ -1,65 +1,94 @@
-<ion-header class="ion-padding">
-  <ion-toolbar color="primary">
-    <ion-title class="ion-text-center">{{ titulo }}</ion-title>
+<ion-header class="ion-no-border header-gradient">
+  <ion-toolbar class="header-gradient">
+    <ion-buttons slot="start">
+      <ion-button fill="clear" (click)="dismiss()" class="back-button">
+        <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-title class="header-title">
+      <div class="title-container">
+        <ion-icon name="cube" class="title-icon"></ion-icon>
+        {{ titulo }}
+      </div>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="form-content">
-  <form>
-    <ion-grid>
-      <ion-row>
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Nombre del Producto</ion-label>
-            <ion-input type="text" [(ngModel)]="EditProducto.nombre" name="nombre" required></ion-input>
-          </ion-item>
-        </ion-col>
+<ion-content class="content-background ion-padding">
+  <div class="form-container">
+    <form>
+      <ion-grid>
+        <ion-row class="ion-align-items-center ion-justify-content-center">
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="barcode-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Código del Producto</ion-label>
+              <ion-input type="text" [(ngModel)]="EditProducto.codigo" name="codigo" required></ion-input>
+            </ion-item>
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-input type="text" [value]="formatCurrency(EditProducto.costo)"
-              (ionInput)="updateFormattedInput($event, 'costo')" inputmode="numeric">
-            </ion-input>
-          </ion-item>
-        </ion-col>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="cube-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Nombre del Producto</ion-label>
+              <ion-input type="text" [(ngModel)]="EditProducto.nombre" name="nombre" required></ion-input>
+            </ion-item>
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-input type="text" [value]="formatCurrency(EditProducto.precio_maximo)"
-              (ionInput)="updateFormattedInput($event, 'precio_maximo')" inputmode="numeric">
-            </ion-input>
-          </ion-item>
-        </ion-col>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="pricetag-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Costo (Gs.)</ion-label>
+              <ion-input type="text" [value]="formatCurrency(EditProducto.costo)"
+                (ionInput)="updateFormattedInput($event, 'costo')" inputmode="numeric">
+              </ion-input>
+            </ion-item>
+          </ion-col>
 
-        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
-          <ion-item class="custom-item">
-            <ion-label position="floating">Estado</ion-label>
-            <ion-select [(ngModel)]="EditProducto.estado" name="estado" [compareWith]="compareWithEstado">
-              <ion-select-option value="1">ACTIVO</ion-select-option>
-              <ion-select-option value="0">INACTIVO</ion-select-option>
-            </ion-select>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </form>
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="cash-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Precio Máximo (Gs.)</ion-label>
+              <ion-input type="text" [value]="formatCurrency(EditProducto.precio_maximo)"
+                (ionInput)="updateFormattedInput($event, 'precio_maximo')" inputmode="numeric">
+              </ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size-lg="6" size-md="6" size-sm="12" size="12">
+            <ion-item class="modern-item">
+              <ion-icon name="checkmark-circle-outline" slot="start" color="medium"></ion-icon>
+              <ion-label position="floating">Estado</ion-label>
+              <ion-select [(ngModel)]="EditProducto.estado" name="estado" [compareWith]="compareWithEstado">
+                <ion-select-option value="1">ACTIVO</ion-select-option>
+                <ion-select-option value="0">INACTIVO</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </div>
 </ion-content>
 
 <ion-footer class="custom-footer">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" class="ion-text-center">
-        <ion-button expand="block" color="success" (click)="saveProducto()">
-          <ion-icon slot="start" name="save"></ion-icon>
-          Guardar
-        </ion-button>
-      </ion-col>
-      <ion-col size="6" class="ion-text-center">
-        <ion-button expand="block" color="medium" fill="outline" (click)="dismiss()">
-          <ion-icon slot="start" name="log-out"></ion-icon>
-          Cancelar
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <ion-toolbar class="footer-toolbar">
+    <ion-grid>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="6" class="ion-text-center">
+          <ion-button expand="block" color="success" (click)="saveProducto()">
+            <ion-icon slot="start" name="save"></ion-icon>
+            Guardar
+          </ion-button>
+        </ion-col>
+        <ion-col size="6" class="ion-text-center">
+          <ion-button expand="block" color="medium" fill="outline" (click)="dismiss()">
+            <ion-icon slot="start" name="log-out"></ion-icon>
+            Cancelar
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
 </ion-footer>
