--- a/src/app/paginas/usuarios/usuarios.page.html
+++ b/src/app/paginas/usuarios/usuarios.page.html
@@ -1,36 +1,70 @@
-<ion-content class="login-content" [fullscreen]="true">
-  <!-- Logo -->
-  <div class="logo-container">
-    <img src="../../../assets/img/logo.jpg" class="logo" alt="Logo S&N APP" />
+<ion-content class="login-content" [scrollY]="false">
+  <div class="background-shapes">
+    <div class="shape shape-1"></div>
+    <div class="shape shape-2"></div>
+    <div class="shape shape-3"></div>
   </div>
 
-  <!-- Formulario -->
-  <div class="form-wrapper">
-    <ion-grid>
-      <ion-row justify-content-center>
-        <ion-col size="12" size-sm="12" size-md="12" size-lg="8" size-xl="6">
-          <ion-item lines="full" class="input-box">
-            <ion-icon name="person" slot="start" color="primary"></ion-icon>
-            <ion-input type="text" placeholder="Usuario" [(ngModel)]="loginacceso"></ion-input>
-          </ion-item>
+  <div class="logo-header">
+    <div class="logo-overlay"></div>
+    <img src="../../../assets/img/logo.jpg" alt="S&N Logo" class="logo-full">
+    <div class="logo-gradient"></div>
+  </div>
 
-          <ion-item lines="full" class="input-box">
-            <ion-icon name="eye-off" slot="start" color="primary" (click)="togglePasswordVisibility()"></ion-icon>
-            <ion-input [type]="showPassword ? 'text' : 'password'" placeholder="Contraseña" [(ngModel)]="password"></ion-input>
-          </ion-item>
+  <div class="main-container">
+    <div class="form-wrapper">
+      <ion-grid>
+        <ion-row justify-content-center>
+          <ion-col size="12" size-sm="12" size-md="12" size-lg="8" size-xl="6">
+            <ion-item lines="full" class="input-box">
+              <ion-icon name="person" slot="start"></ion-icon>
+              <ion-input type="text" placeholder="Usuario" [(ngModel)]="loginacceso"></ion-input>
+            </ion-item>
 
-          <ion-button expand="block"  class="action-btn" (click)="Ingresar()">Ingresar</ion-button>
-          
-          <ion-button expand="block" color="medium" class="action-btn" (click)="dismiss()">Salir</ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+            <ion-item lines="full" class="input-box">
+              <ion-icon name="eye-off" slot="start" (click)="togglePasswordVisibility()"></ion-icon>
+              <ion-input [type]="showPassword ? 'text' : 'password'" placeholder="Contraseña" [(ngModel)]="password"></ion-input>
+            </ion-item>
+
+            <ion-button expand="block" class="primary-btn" (click)="Ingresar()">Ingresar</ion-button>
+            <ion-button expand="block" fill="outline" class="secondary-btn" (click)="dismiss()">Salir</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+
+    <div class="ads-section">
+      <ion-text class="ads-title">
+        <p>Soluciones a tu medida</p>
+      </ion-text>
+      <div class="ads-icons-container">
+        <div class="ads-item">
+          <ion-icon name="wallet-outline"></ion-icon>
+          <span>Financiamiento</span>
+        </div>
+        <div class="ads-item">
+          <ion-icon name="bar-chart-outline"></ion-icon>
+          <span>Proyectos</span>
+        </div>
+        <div class="ads-item">
+          <ion-icon name="receipt-outline"></ion-icon>
+          <span>Asesoría</span>
+        </div>
+      </div>
+    </div>
   </div>
 </ion-content>
 
-<ion-footer class="footer">
-  <div class="footer-text">
-    <h1>© 2025 S&N APP</h1>
-    <p>Todos los derechos reservados.</p>
-  </div>
+<ion-footer class="custom-footer">
+  <ion-toolbar class="footer-toolbar">
+    <ion-text class="footer-content">
+      <h6>© 2025 S&N APP</h6>
+      <p>Todos los derechos reservados</p>
+      <div class="company-info">
+        <span class="website-link" (click)="openWebsite()">
+          www.synsa.com.py
+        </span>
+      </div>
+    </ion-text>
+  </ion-toolbar>
 </ion-footer>
